Update page content and include breadcrumbs and back link in journey

--- a/app/views/components/progress-card.njk
+++ b/app/views/components/progress-card.njk
@@ -51,10 +51,10 @@
         <p class="progress__header-date"><b>Sent on:</b> 07/10/2024</p>
       </div>
 
-      <p class="progress__content">Allan King has requested to transfer their paper certificate to the dls as a digital record of their achievement</p>
+      <p class="progress__content">James King has requested to transfer their paper certificate to the dls as a digital record of their achievement.</p>
 
       {{ details({
-        text: "What is a paper to digital sign of request?",
+        text: "What is a paper to digital sign-off request?",
         HTML: "
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis nostrum eius, soluta voluptates vero unde! Quos voluptatibus quis illo alias vel ducimus dignissimos at temporibus cumque molestias aut, omnis earum?</p>
         "
@@ -76,11 +76,11 @@
         <p class="progress__header-date"><b>Signed off on:</b> 07/10/2024</p>
       </div>
 
-      <p class="progress__content">Allan King has completed their IV therapy passport</p>
+      <p class="progress__content">James King has completed their IV therapy passport</p>
 
       {{ button({
         text: "View certificate",
-        href: "/paper-transfer/admin/review-and-submit",
+        href: "#",
         classes: "progress__action"
       }) }}
     </div>
