--- a/app/views/index.html
+++ b/app/views/index.html
@@ -83,7 +83,7 @@
           {# prototypes/paper-transfer-process/admin/supervisor-dashboard/index.html #}
           <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
             {{ card({
-              "href": "/paper-transfer/admin/supervisor-dashboard",
+              "href": "/paper-transfer/admin",
               "clickable": "true",
               "heading": "Paper transfer journey - Admin",
               "headingClasses": "nhsuk-heading-s",
