--- a/app/views/prototypes/paper-transfer-process/admin/sign-decleration/index.html
+++ b/app/views/prototypes/paper-transfer-process/admin/sign-decleration/index.html
@@ -12,7 +12,7 @@
     <div class="nhsuk-grid-row">
       <div class="nhsuk-grid-column-full">
         {{ backLink({
-          href: "/paper-transfer/learner/",
+          href: "/paper-transfer/admin/review-and-submit",
           text: "Go back"
         }) }}
 
@@ -22,7 +22,7 @@
           <p>I certify that this individual is deemed safe and proficient to administer IV medication using the methods and vascular access devices recorded in the Record of Achievement. They have also successfully completed the IV Therapy Passport pathway.</p>
           <p>By signing off this IV Therapy Passport, you are confirming that the learner has:</p>
           <ul>
-            <li>completed both Step 1 (eLearning) and Step 2 (eAssessments), as documented in the Record of Learning and Knowledge Assessment</li>
+            <li>completed both Step 1 (elearning) and Step 2 (eAssessments), as documented in the Record of Learning and Knowledge Assessment</li>
             <li>achieved proficiency in at least 1 optional proficiency from each category: Methods of Preparation, Methods of Administration, and Vascular Access Devices</li>
             <li>achieved proficiency in all optional proficiencies required for their role.</li>
             <li>been assessed by competent assessors, authorised by their line manager, to supervise and assess IV medication administration</li>
@@ -42,10 +42,10 @@
                 name: "example",
                 id: "example",
                 label: {
-                  text: "Can you provide more detail?"
+                  text: "Provide feedback"
                 },
                 hint: {
-                  text: "This will help inform the practitioner why they where unsuccessful and act as a reference"
+                  text: "By providing clear, structured, actionable insights, the system enables healthcare professionals to reflect on their performance, identify areas for improvement and take corrective measures"
                 }
               }) }}
             {% endset -%}
@@ -60,7 +60,7 @@
                 },
                 {
                   value: "rejected",
-                  text: "Reject paper assessment sign-off request",
+                  text: "I reject paper assessment sign-off request",
                   conditional: {
                     html: ReasonHtml
                   }
