--- a/app/views/prototypes/paper-transfer-process/admin/supervisor-dashboard/index.html
+++ b/app/views/prototypes/paper-transfer-process/admin/supervisor-dashboard/index.html
@@ -5,6 +5,14 @@
 {% endblock %}
 
 {% block beforeContent %}
+{{ breadcrumb({
+  items: [
+    {
+      href: "/paper-transfer/admin",
+      text: "Home"
+    }
+  ]
+}) }}
 {% endblock %}
 
 {% block content %}
@@ -51,7 +59,7 @@
       <ul class="nhsuk-contents-list__list">
         <li class="nhsuk-contents-list__item">
         <a href="/paper-transfer/admin/review-and-submit" class="nhsuk-link--no-visited-state">
-          Review and sign-off Allan King's Paper to digital transfer
+          Review and sign-off James King's Paper to digital transfer
         </a>
         . Requested 06/09/2024
         </li>
