Update todo and decelration page to reference iv therapy passport

--- a/app/views/prototypes/paper-transfer-process/admin/supervisor-dashboard/index.html
+++ b/app/views/prototypes/paper-transfer-process/admin/supervisor-dashboard/index.html
@@ -59,15 +59,15 @@
       <ul class="nhsuk-contents-list__list">
         <li class="nhsuk-contents-list__item">
         <a href="/paper-transfer/admin/review-and-submit" class="nhsuk-link--no-visited-state">
-          Review and sign-off James King's Paper to digital transfer
+          Review and sign-off James King's Paper to digital transfer for their IV Therapy passport.
         </a>
-        . Requested 06/09/2024
+        . Requested 06/10/2024
         </li>
         <li class="nhsuk-contents-list__item">
         <a href="#" class="nhsuk-link--no-visited-state">
           Confirm self-assessment results for Bob Ross's Step 1 Proficiencies - National Proficiency Framework for Registered Nurses in Adult Critical Care
         </a>
-        . Requested 24/06/2024
+        . Requested 24/09/2024
         </li>
       </ul>
 
