--- a/app/views/prototypes/paper-transfer-process/admin/review-and-submit/index.html
+++ b/app/views/prototypes/paper-transfer-process/admin/review-and-submit/index.html
@@ -19,7 +19,7 @@
         <h1>Check information is correct and send for review</h1>
 
         <div class="content-group">
-          <p>Please find below a summary of Allan Kings’s paper assessment information.</p>
+          <p>Please find below a summary of Allan Kings’s paper assessment information for their IV Therapy passport.</p>
           <p>Review this information on this page and check it is correct to the best of your knowledge:</p>
         </div>
 
