--- a/app/views/prototypes/paper-transfer-process/admin/review-and-submit/index.html
+++ b/app/views/prototypes/paper-transfer-process/admin/review-and-submit/index.html
@@ -12,7 +12,7 @@
     <div class="nhsuk-grid-row">
       <div class="nhsuk-grid-column-full">
         {{ backLink({
-          href: "/paper-transfer/admin/framework",
+          href: "/paper-transfer/admin/before-you-start",
           text: "Go back"
         }) }}
 
@@ -58,7 +58,11 @@
                   <li>{{ item }}</li>
                 {% endfor %}
               {% else %}
-                <li>No additional proficiencies have been included</li>
+                <li>Methods of preparation: 14a. Reconstitute IV medication from powder</li>
+                <li>Methods of administration: 23a. Administer a timed bolus at correct rate</li>
+                <li>Peripheral venous access devices (PVAD): midline catheter</li>
+                <li>Central Venous Access Devices (CVAD): central venous catheter (CVC) short term non skin tunnelled</li>
+                <li>Central Venous Access Devices (CVAD): central venous catheter (CVC) long term skin tunnelled</li>
               {% endif %}
               </ul>
             </dd>
