--- a/app/views/prototypes/paper-transfer-process/admin/sign-decleration/index.html
+++ b/app/views/prototypes/paper-transfer-process/admin/sign-decleration/index.html
@@ -56,11 +56,11 @@
               items: [
                 {
                   value: "approved",
-                  text: "I approve the transfer of the paper assessment sign-off"
+                  text: "I approve the transfer of the paper assessment to digital"
                 },
                 {
                   value: "rejected",
-                  text: "I reject paper assessment sign-off request",
+                  text: "I reject the transfer of the paper assessment to digital",
                   conditional: {
                     html: ReasonHtml
                   }
