--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -6,7 +6,7 @@
 @import 'components/related-nav';
 
 ///////////////////////////////////////////
-// Prototype custome css
+// Prototype custom css
 ///////////////////////////////////////////
 
 @import 'variables';
@@ -14,15 +14,18 @@
 @import 'mixins';
 @import 'global';
 
-@import 'components/utitlties';
+@import 'components/utilities';
 @import 'components/picture';
 @import 'components/featured-media';
 @import 'components/search';
 @import 'components/in-page-nav';
 @import 'components/certificate';
+@import 'components/learning-log';
+@import 'components/quick-filters';
+@import 'components/user-entry';
 @import 'components/task-list';
-
 @import 'components/nhsuk-overrides/summary-list';
+@import 'components/nhsuk-overrides/tag';
 
 ///////////////////////////////////////////
 // DLS css
