--- a/app/views/prototypes/paper-transfer-process/learner/additional-proficiencies/add-proficiencies-steps-1.html
+++ b/app/views/prototypes/paper-transfer-process/learner/additional-proficiencies/add-proficiencies-steps-1.html
@@ -17,7 +17,10 @@
         }) }}
 
         <div class="content-group">
-          <h1>Additional proficiencies</h1>
+          <h1>Record completed proficiencies from paper assessment</h1>
+
+          <p>Additional proficiencies refer to specific skills or competencies that are not part of the standard requirements for this assessment but may be added based on your role, specialisation or the needs of your workplace.</p>
+          <p>You may know these as optional proficiencies, chapters or domains, for example.</p>
 
           {{ warningCallout({
             heading: "Record additional proficiencies",
