--- a/app/views/prototypes/paper-transfer-process/learner/index.html
+++ b/app/views/prototypes/paper-transfer-process/learner/index.html
@@ -107,9 +107,9 @@
               classes: "nhsuk-u-margin-bottom-0", items: [
                 {
                   title: {
-                    text: "Record additional proficiencies from paper assessment"
+                    text: "Record completed proficiencies from paper assessment"
                   },
-                  href: "/paper-transfer/learner/additional-proficiencies",
+                  href: "/additional-proficiencies-answer",
                   status: {
                     text: "Complete",
                     classes: "nhsuk-task-list__status--completed"
@@ -124,9 +124,9 @@
               items: [
                 {
                   title: {
-                    text: "Record additional proficiencies from paper assessment"
+                    text: "Record completed proficiencies from paper assessment"
                   },
-                  href: "/paper-transfer/learner/additional-proficiencies",
+                  href: "/additional-proficiencies-answer",
                   status: {
                     tag: {
                       text: "Incomplete",
