--- a/app/views/prototypes/paper-transfer-process/learner/additional-proficiencies/add-proficiencies-iv-therapy.html
+++ b/app/views/prototypes/paper-transfer-process/learner/additional-proficiencies/add-proficiencies-iv-therapy.html
@@ -17,7 +17,7 @@
         }) }}
 
         <div class="content-group">
-          <h1>Select proficiencies</h1>
+          <h1>Record completed proficiencies from paper assessment</h1>
 
           {{ warningCallout({
             heading: "Record additional proficiencies",
