--- a/app/views/prototypes/paper-transfer-process/learner/additional-proficiencies/add-proficiencies-iv-therapy.html
+++ b/app/views/prototypes/paper-transfer-process/learner/additional-proficiencies/add-proficiencies-iv-therapy.html
@@ -19,12 +19,15 @@
         <div class="content-group">
           <h1>Record completed proficiencies from paper assessment</h1>
 
+          <p>Additional proficiencies refer to specific skills or competencies that are not part of the standard requirements for this assessment but may be added based on your role, specialisation or the needs of your workplace.</p>
+          <p>You may know these as optional proficiencies, chapters or domains, for example.</p>
+
           {{ warningCallout({
             heading: "Record additional proficiencies",
             HTML: "<p>Please ensure that you only include additional proficiencies you achieved in your paper assessment. This will help ensure that your assessment is accurately recorded and recognised.</p>"
           }) }}
 
-        <h2>Additional proficiencies</h2>
+        <h2>Select proficiencies</h2>
 
         <form action=/paper-transfer/learner/ method="post" class="form">
           <div class="content-group">
